--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </style>
 </head>
-<body style="background-color: black" >
+<body style="background-color: blue" >
 	<p><i>
 
 	<div>
@@ -19,10 +19,10 @@
 	<h1 style="color: violet"> Masharipova Farida </h1>
 	<h2 style="color: violet">19.08.1998</h2>
 	<h3 style="color: violet">Student of INHA University in tashkent</h3>
-	<h4 style="color: violet">From KHAREZM</h4>
+	<h4 style="color: violet">From KHOREZM</h4>
 	<h5 style="background-color: gray"></h5>
 	<p></p>
-	<div style="text-align: center;"><img src="FAR.jpg" width="350" height="450" ></div>
+	<div style="text-align: center;"><img src="FAR.jpg" width="350" height="550" ></div>
 	<p style="color: violet">Hobby </p>
 	<p style="color: violet">Walking,Watching TV, Coding</p>
 	<a href="http://telegram.me/m_fariiida">Telegram account</a>
