--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	<title></title>
 	<style>
 	div {
-		background-color: black; 
-		color: #ffffff;
+		background-color: blue; 
 		text-align: center;
 	}
 
