--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 	<title></title>
 	<style>
 	div {
-		background-color: blue; 
+		
 		text-align: center;
 	}
 
 </style>
 </head>
-<body style="background-color: blue" >
+<body style="background.jpg">
 	<p><i>
 
 	<div>
