--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 	<title></title>
 	<style>
 	div {
-		<body style="background.jpg">
+<body style="background-image:url('background.jpg');">
 		
 		text-align: center;
 	}
 
 </style>
 </head>
-<body style="background.jpg">
+<body style="background-image:url('background.jpg');">
 	<p><i>
 
 	<div>
