--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
 	<title></title>
 	<style>
 	div {
-<body style="background-image:url('background.jpg');">
 		
 		text-align: center;
 	}
 
 </style>
 </head>
-<body style="background-image:url('background.jpg');">
+<body style="background-image:"background.jpg">
 	<p><i>
 
 	<div>
